[package]
name = "cowtchoox"
version = "0.1.0"
edition = "2021"
default-run = "cowtchoox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
clap = "4.4.18"
colored = "2.1.0"
copy_dir = "0.1.3"
headless_chrome = "1.0.8"
regex = "1.10.3"
zip_archive = "1.2.2"
